# vllm_router

./: .env.example  .gitignore  Dockerfile  README.md  aiohttp_client.py  app.py  build-image.sh  debug_eviction.py  docker-compose.yml  dynamic_config.py  entrypoint.sh  env_config.py  example_url_config.yaml  protocols.py  pyproject.toml  requirements.txt  run-router.sh  service_discovery.py  test_lru_cache.py  test_memory_usage.py  test_url_discovery.py  utils.py
cache/: __init__.py  cache.py
domain_registration/: __init__.py  attestation_service.py  cert_manager.py  cloudflare_dns.py  env_config.py  evidence_generator.py
experimental/: __init__.py  feature_gates.py  semantic_cache.py  semantic_cache_integration.py
experimental/pii/: middleware.py
experimental/semantic_cache/: __init__.py  semantic_cache.py
experimental/semantic_cache/db_adapters/: __init__.py
middleware/: __init__.py  admin_auth.py  user_auth.py
parsers/: parser.py
prefix/: LRU_CACHE_README.md  hashtrie.py
quote/: __init__.py  quote.py  quote_simple.py
routers/: backend_management_router.py  batches_router.py  domain_registration_router.py  files_router.py  main_router.py  metrics_router.py  routing_logic.py
services/batch_service/: __init__.py  local_processor.py  processor.py
services/callbacks_service/: callbacks.py
services/domain_registration_service/: __init__.py  domain_service.py
services/files_service/: __init__.py  file_storage.py  storage.py
services/request_service/: request.py  rewriter.py
stats/: engine_stats.py  log_stats.py  request_stats.py
