[project]
name = "vllm-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "psutil>=7.1.3",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "aiohttp>=3.9.0",
    "certbot>=2.0.0",
    "certbot-dns-cloudflare>=2.0.0",
    "cloudflare>=2.0.0",
    "cryptography>=41.0.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
]
